# RotaSeguraBack

./: Dockerfile  pyproject.toml  start.sh
back-rotasegura/: Makefile
back-rotasegura/src/: db.py  main.py  router.py
src/: router.py  settings.py
