[tool.poetry]
name = "rota-segura-backend"
version = "0.1.0"
description = "API FastAPI para cálculo de rotas seguras com base em dados de criminalidade"
authors = ["Grupo Rota Segura <gisobe@unifesp.br.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
pydantic = "^2.11.7"
python-dotenv = "^1.1.0"
pymongo = "^4.13.0"
osmnx = "^2.0.4"
networkx = "^3.5"
folium = "^0.20.0"
geopy = "^2.4.1"
pandas = "^2.2.3"
shapely = "^2.1.1"
numpy = "^2.2.6"
scikit-learn = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
